--- a/mon/index.html
+++ b/mon/index.html
@@ -131,7 +131,7 @@
                                     </div>
                                 </div>
                                 <!-- Card Body -->
-                                <div class="card-body">
+                                <div class="card-body px-0">
                                     <div class="chart-area">
                                         <canvas id="myAreaChart"></canvas>
                                     </div>
