--- a/mon/index.html
+++ b/mon/index.html
@@ -175,7 +175,9 @@
 
                         
                     </div>
-
+                    <!--div class="text-center text-md-right">
+                        <input type="date" class="form-control form-control-sm d-inline-block mb-3" name="" id="selectedDate" style="width:150px;">
+                    </div-->
                     <small class="float-md-right d-block text-center lastUpdated" style="font-size: 75%;"></small>
 
                 </div>
