--- a/mon/index.html
+++ b/mon/index.html
@@ -60,7 +60,7 @@
                     <!-- Content Row -->
                     <div id="inverterTemplateDataRow" class=" d-none">
                   
-                            <div class="col-12">
+                            <div class="col-12 col-sm-6 col-md-12">
                                 <h6 class="m-0 font-weight-bold inverterTitle">---</h6>
                                 <div class="row" >
                                     <div class="col-12 col-md-4">
